# Awesome-wm-config

./: .gitignore  .gitmodules  .lua.config.json  .luarc.json  CMakeLists.txt  Makefile  README.md  autostart-config.lua  binding-config.lua  desktop-config.lua  env-config.lua  erchec-config.lua  error-config.lua  error.lua  keybindings.lua  keys-config.lua  layout-config.lua  layouts-config.lua  logout-config.lua  menu-config.lua  rc.lua  rules-config.lua  screen-config.lua  signals-config.lua  signals.lua  titlebar-config.lua  util.lua  utils.lua  variables.lua
client/: init.lua  titlebar.lua
desktop/: clock.lua
keybindings/: audio.lua  awesome.lua  client.lua  init.lua  launcher.lua  layout.lua  movement.lua  tags.lua  utils.lua
modules/: .gitignore  init.lua
modules/pulseaudio/: CMakeLists.txt  Makefile  callbacks.c  callbacks.h  init.c  init.h  pa_operations.c  pa_operations.h  pa_utils.c  pa_utils.h  pulseaudio.c  pulseaudio.h  test.lua  types.c  types.h  utils.c  utils.h
modules/pulseaudio/src/: callbacks.c  callbacks.h  lua_module.c  lua_module.h  pa_operations.c  pa_operations.h  types.c  types.h
modules/pulseaudio/src/cpp/: init.cpp  init.h  pa_operations.h  types.cpp
scripts/: battery.py  pyrightconfig.json
service/: pulseMixer.lua  pulseaudio_service.lua
services/: init.lua  playerctl.lua  pulse.lua
theme/: colors.lua  desktop.lua  init.lua  layout.lua  theme.lua  titelbar.lua
ui/: init.lua  screen-config.lua
util/: init.lua  pulse.lua  read.lua
widget/: controlPanel.lua
widgets/: task-switcher.lua
window-manager/: init.lua  (+5 more)
(+45 files in other folders)
